<resources>
    <string name="app_name">IQA_Registro</string>
    <string name="Nombre">Nombre</string>
    <string name="Empresa">Empresa</string>
    <string name="Telefono">Telefono</string>
    <string name="Email">Email</string>
    <string name="Registro">Registro</string>
    <string name="Foto_Credencia">Credencial</string>
    <string name="motivo">Motivo de su visita</string>
    <string name="Proveedor">Proveedor</string>
    <string name="Cliente">Cliente</string>
    <string name="VisitaG">Visita en general</string>
    <string name="ServicoOfrece">Servicio que ofrece</string>
</resources>
