<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".Registro_1">

    <TextView
        android:id="@+id/textView"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="316dp"
        android:layout_marginLeft="316dp"
        android:layout_marginTop="120dp"
        android:text="@string/motivo"
        android:textSize="36sp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <Button
        android:id="@+id/button2"
        android:layout_width="250dp"
        android:layout_height="0dp"
        android:layout_marginStart="344dp"
        android:layout_marginLeft="344dp"
        android:layout_marginTop="44dp"
        android:background="@drawable/btn_uno"
        android:text="@string/Cliente"
        android:textColor="@drawable/tx_btn_uno"
        android:textSize="24sp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/textView" />

    <Button
        android:id="@+id/button3"
        android:layout_width="250dp"
        android:layout_height="wrap_content"
        android:layout_marginStart="344dp"
        android:layout_marginLeft="344dp"
        android:layout_marginTop="48dp"
        android:background="@drawable/btn_uno"
        android:text="@string/Proveedor"
        android:textColor="@drawable/tx_btn_uno"
        android:textSize="24sp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/button2" />

    <Button
        android:id="@+id/button4"
        android:layout_width="250dp"
        android:layout_height="0dp"
        android:layout_marginStart="344dp"
        android:layout_marginLeft="344dp"
        android:layout_marginTop="36dp"
        android:background="@drawable/btn_uno"
        android:text="@string/VisitaG"
        android:textColor="@drawable/tx_btn_uno"
        android:textSize="24sp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/button3" />
</androidx.constraintlayout.widget.ConstraintLayout>