<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".Act_Cliente">

    <EditText
        android:id="@+id/etx_nombre"
        android:layout_width="350dp"
        android:layout_height="40dp"
        android:layout_marginStart="306dp"
        android:layout_marginLeft="306dp"
        android:layout_marginTop="52dp"
        android:autofillHints=""
        android:background="@drawable/txt_style"
        android:ems="10"
        android:gravity="center"
        android:hint="@string/Nombre"
        android:inputType="textPersonName"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <EditText
        android:id="@+id/etx_empresa"
        android:layout_width="350dp"
        android:layout_height="40dp"
        android:layout_marginStart="306dp"
        android:layout_marginLeft="306dp"
        android:layout_marginTop="24dp"
        android:autofillHints=""
        android:background="@drawable/txt_style"
        android:ems="10"
        android:gravity="center"
        android:hint="@string/Empresa"
        android:inputType="textPersonName"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/etx_nombre" />

    <Button
        android:id="@+id/button"
        android:layout_width="289dp"
        android:layout_height="69dp"
        android:layout_marginStart="328dp"
        android:layout_marginLeft="328dp"
        android:layout_marginTop="48dp"
        android:background="@drawable/btn_uno"
        android:text="@string/Registro"

        android:textColor="@drawable/tx_btn_uno"
        android:textSize="30sp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/etx_telefono"
        tools:text="@string/Registro" />

    <EditText
        android:id="@+id/etx_email"
        android:layout_width="350dp"
        android:layout_height="40dp"
        android:layout_marginStart="306dp"
        android:layout_marginLeft="306dp"
        android:layout_marginTop="24dp"
        android:background="@drawable/txt_style"
        android:ems="10"
        android:gravity="center"
        android:hint="@string/Email"
        android:inputType="textEmailAddress"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/etx_empresa" />

    <EditText
        android:id="@+id/etx_telefono"
        android:layout_width="350dp"
        android:layout_height="40dp"
        android:layout_marginStart="306dp"
        android:layout_marginLeft="306dp"
        android:layout_marginTop="24dp"
        android:autofillHints=""
        android:background="@drawable/txt_style"
        android:ems="10"
        android:gravity="center"
        android:hint="@string/Telefono"
        android:inputType="phone"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/etx_email" />

    <ImageView
        android:id="@+id/imageView"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="316dp"
        android:layout_marginLeft="316dp"
        android:layout_marginTop="16dp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/button"
        app:srcCompat="@android:drawable/ic_menu_view"
        tools:srcCompat="@drawable/logo" />

</androidx.constraintlayout.widget.ConstraintLayout>